@@ -9,6 +9,8 @@ Backward compatible changes:
 NEW FEATURES:
   ZOOKEEPER-1355. Add zk.updateServerList(newServerList) (Alex Shraer, Marshall McMullen via fpj)
 
+  ZOOKEEPER-1572. Add an async (Java) interface for multi request (Sijie Guo via camille)
+  
 BUGFIXES:
 
   ZOOKEEPER-786. Exception in ZooKeeper.toString
